# silkworm

./: .env.example  .gitignore  DESIGN.md  README.md  biome.json  components.json  drizzle.config.ts  next.config.ts  package.json
scripts/: seed.ts
scripts/_seed-fixtures/: demo-run.ts  mock.ts  workspace-mock.ts
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/examples/: mnist_mlx.py
sdk/python/siliconworm/: env.py  run.py  version.py
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/app/(app)/: layout.tsx  page.tsx
src/app/(app)/alerts/: page.tsx
src/app/(app)/artifacts/: page.tsx
src/app/(app)/p/[project]/: page.tsx
src/app/(app)/p/[project]/runs/[runId]/: page.tsx
src/app/(app)/runs/: page.tsx
src/app/(app)/sweeps/: page.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/app/api/auth/callback/: route.ts
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/auth/me/: route.ts
src/app/dashboard/: page.tsx
src/app/dashboard/alerts/: page.tsx
src/app/dashboard/artifacts/: page.tsx
src/app/dashboard/p/[project]/: page.tsx
src/app/dashboard/p/[project]/runs/[runId]/: page.tsx
src/app/dashboard/runs/: page.tsx
src/app/dashboard/sweeps/: page.tsx
src/app/sign-in/: page.tsx  sign-in-form.tsx  sign-in-marketing.tsx
src/components/: brand.tsx
src/components/app/: page-header.tsx  sidebar.tsx
src/components/charts/: big-chart.tsx
src/components/dashboard/: run-status-pill.tsx
src/components/dris/: variant-class.ts  variants.ts
src/components/marketing/: code-sample.tsx  faq.tsx  feature-band.tsx  footer.tsx  hero.tsx  live-demo.tsx  overlay-chart.tsx  overlay-demo.tsx  social-proof.tsx  terminal-demo.tsx  wordmark-header.tsx
src/components/ui/: kbd.tsx  pill.tsx  sparkline.tsx  status-dot.tsx  tick-rule.tsx
src/lib/: cache.ts  cached-queries.ts  db.ts  demo-ids.ts  demo-run.ts  mock.ts  redis.ts  schema.ts  utils.ts  workspace-mock.ts
src/lib/auth/: composio.ts  current-user.ts  session.ts
src/lib/queries/: artifacts.ts  projects.ts  runs.ts  workspace.ts
