[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "siliconworm"
dynamic = ["version"]
description = "Research-grade experiment tracking SDK. Local-first; ships to the Siliconworm dashboard when configured."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Siliconworm Labs" },
]
maintainers = [
  { name = "Siliconworm Labs" },
]
keywords = [
  "machine-learning",
  "experiment-tracking",
  "mlops",
  "metrics",
  "training",
  "observability",
  "wandb",
  "tensorboard",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Logging",
  "Typing :: Typed",
]
# Stdlib only. Optional extras pull in torch/numpy if you want auto-coercion.
dependencies = []

[project.optional-dependencies]
# Auto-coercion of framework tensors inside .log() — pulled in only if you
# ask for them. The SDK itself remains zero-dependency at the wheel level.
torch = ["torch>=2.0"]
numpy = ["numpy>=1.24"]
mlx = ["mlx>=0.20"]              # Apple Silicon — Metal-backed arrays
all = ["torch>=2.0", "numpy>=1.24", "mlx>=0.20"]
dev = [
  "build>=1.2",
  "twine>=5",
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/aryan-shubh/siliconworm"
Documentation = "https://github.com/aryan-shubh/siliconworm/blob/main/sdk/python/README.md"
Repository = "https://github.com/aryan-shubh/siliconworm"
Issues = "https://github.com/aryan-shubh/siliconworm/issues"
Changelog = "https://github.com/aryan-shubh/siliconworm/blob/main/sdk/python/CHANGELOG.md"

[tool.hatch.version]
path = "siliconworm/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "siliconworm/",
  "examples/",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["siliconworm"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]  # function calls in defaults — needed for atexit pattern

# `uv publish --index testpypi` uploads to TestPyPI. PyPI is the default,
# so no entry needed for it.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
